Fixed image upload

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <section class="puppy-info">
                 <figure>
                     <img 
-                    src="https://images.hdqwalls.com/wallpapers/puppy-snout-dog.jpg"
+                    src="./Resources/Images/puppy-snout-dog.jpg"
                     alt="Puppy"
                     width="960px"
                     height="540px"
